<resources>
    <string name="app_name"><b>BHAGAVADGITA</b></string>
    <string name="about_foundation"><b>ABOUT FOUNDATION</b></string>
    <string name="about_bahagavathgita"><b>ABOUT BHAGAVADGITA</b></string>
    <string name="gallery"><b>GALLERY</b></string>
    <string name="gita_jayanthi_celebrations"><b>GITA JAYANTHI CELEBRATIONS</b></string>
    <string name="about_sponsers"><b>ABOUT SPONSERS</b></string>
    <string name="donate"><b>DONATE</b></string>
    <string name="about_app"><b>ABOUT APP</b></string>
    <string-array name="countries_array">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bermuda</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>British Indian Ocean Territory</item>
        <item>British Virgin Islands</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cape Verde</item>
        <item>Cayman Islands</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Christmas Island</item>
        <item>Cocos Islands</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Cook Islands</item>
        <item>Costa Rica</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Democratic Republic of the Congo</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>East Timor</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Falkland Islands</item>
        <item>Faroe Islands</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>French Polynesia</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Gibraltar</item>
        <item>Greece</item>
        <item>Greenland</item>
        <item>Grenada</item>
        <item>Guam</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Honduras</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Isle of Man</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Ivory Coast</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jersey</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macao</item>
        <item>Macedonia</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mayotte</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Montserrat</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>Netherlands Antilles</item>
        <item>New Caledonia</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>Niue</item>
        <item>North Korea</item>
        <item>Northern Mariana Islands</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Pitcairn</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Puerto Rico</item>
        <item>Qatar</item>
        <item>Republic of the Congo</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Saint Barthelemy</item>
        <item>Saint Helena</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Martin</item>
        <item>Saint Pierre and Miquelon</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Sao Tome and Principe</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Georgia and the South Sandwich Islands</item>
        <item>South Korea</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Svalbard and Jan Mayen</item>
        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Taiwan</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Togo</item>
        <item>Tokelau</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Turks and Caicos Islands</item>
        <item>Tuvalu</item>
        <item>U.S. Virgin Islands</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Vatican</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Wallis and Futuna</item>
        <item>Western Sahara</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>
    <string name="alert_individul">Buy Single Chapter at\n 111/- each</string>
    <string name="alert_all">Buy 18  Chapters at \n 1850/-</string>
    <string name="alertdialogName"><b>Bhagavadgita Foundation\n runs on the funds earned by \n sales of the video. You Can \n select any one of the following:</b></string>
    <string name="aboutfoundation">
        The Bhagavadgita Foundation is a non-profit making spiritual and social service organization established with the object of disseminating the inspiring message of Bhagavadgita universally. The inaugural function of this Foundation took place at Ravindra Bharathi, Hyderabad on the 19th January, 2008 through the auspicious hands of Sri Sri Sri Tridandi China Srimannarayana Ramanuja Jeeyar Swami. There is a pressing need to view Bhagavadgita as a manual for an ethical, noble and ideal way of life and as an outstanding work on personality development. With this object in mind, teaching Bhagavadgita, explaining its essentiality in real life from the childhood itself, has been set as the primary goal by the Foundation. This Foundation which has already become popular among the public with its service-oriented activities also intends to take up the following initiatives:
 </string>
    <string name="aboutfou1">
          <b> Establishing BHAGAVADGITA UNIVERSITY as a \n
     Centre for spiritual and social servcies \n
       UNDER THE AEGIS OF BHAGAVADGITA FOUNDATION</b>
    </string>
    <string name="aboutfou2">
          1.Recording the lofty spiritual, ethical and cultural values of India in the form of CDs and propagating them.\n
    2.Conducting classes on personality development based on the teachings of Bhagavadgita.\n
    3.Helping physically challenged persons.\n
    4.Extending free education to orphaned children.\n
    5.Helping the uncared for old people.\n
    6.Establishing ‘Gosalas’ (to protect uncared for cows).\n
    7.Promoting Ayurveda, the ancient Indian system of medicine an propagating traditional cures for simple ailments\n
    8.Organizing free medical camps\n
    9.Conducting YOGA classes.\n
    10.Conducting Sanskrit classes and conserving and propagating Vedic knowledge and Sastras which should eventually lead to the sublime goal of us...\n
    </string>
    <string name="aboutfou3">
        <b>INDIAN DONORS CAN SEND THEIR DONATIONS TO</b>\n\n
        "BHAGAVADGITA FOUNDATION"\n
        ANDHRA BANK,\n
        SRINIVASAPURAM BRANCH,\n
        RAMANTHAPUR,\n
        HYDERABAD-INDIA.\n
        A/c No: 111010100015443\n
        IFS CODE : ANDB0001110\n
        PAN No : AAAAB5882A\n\n

         <b>FOREIGN DONORS CAN SEND THEIR DONATIONS TO</b>\n\n
        "BHAGAVADGITA FOUNDATION"\n
        STATE BANK OF INDIA,\n
        OVER SEAS BRANCH,\n
        HYDERABAD - INDIA.\n
        A/c.No : 30147152920\n
        IFS CODE : SBIN0001921\n
        SWIFT CODE : SBININBB134\n
        PAN No : AAAAB5882A \n\n

        <b>BOTH INDIAN AND FOREIGN DONORS CAN ALSO SEND THEIR DONATIONS IN THE NAME OF \n"<u>BHAGAVADGITA FOUNDATION</u>"\n BY CHEQUE OR D.D TO THE BELOW ADDRESS</b>\n\n
        BHAGAVADGITA FOUNDATION\n
        C/o. GANGADHARA SASTRY L.V\n
        (Playback Singer - Music Director\n
        Founder Chairmen Bhagavadgita Foundation)\n
        # 3-1-74/3/A ,\n
        Ghantasala Swara Soudham,\n
        Ramasankara Nagar, Ramanthapur,\n
        Hyderabad-500 013,\n
        Telangana, INDIA.\n
         Office: +91 40 - 65456555, 66686555\n
         gitafoundation2008@gmail.com\n
         www.bhagavadgitafoundation.org\n
    </string>
    <string name="aboutfou4">
        *Donations to BHAGAVADGITA FOUNDATION are exempt from Income Tax U/s 80G(5)(VI) OF I.T.ACT. We have the permission of the Ministry of Home Affairs of Govt. of India to receive Foreign donations.\n(FCRA Regn. No: 010220252), PAN: AAAAB5882A
    </string>
</resources>