<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/alertdialog_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/alert"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:src="@drawable/cancel"
            android:layout_gravity="right"
            android:padding="5dp"/>
        <TextView
            android:text="@string/alertdialogName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:id="@+id/textView6" />
        <Button
            android:id="@+id/individualButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/alert_individul"
            android:textColor="@color/ButtonColor"
            android:textStyle="bold"
            android:padding="15dp"
            android:background="@drawable/alert_button_bg"/>
        <Button
            android:id="@+id/allButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/alert_all"
            android:textColor="@color/ButtonColor"
            android:textStyle="bold"
            android:padding="15dp"
            android:background="@drawable/alert_button_bg"/>
    </LinearLayout>

</LinearLayout>