<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbaraboutfoundation"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <android.support.v7.widget.Toolbar
            android:id="@+id/aboutfoundationtoolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_fou"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|enterAlways|exitUntilCollapsed">

            <ImageView
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:srcCompat="@drawable/foundation"
                android:id="@+id/imageView"
                android:minHeight="100dp"

                />

            <ImageView
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                app:srcCompat="@drawable/bhagavadgita"
                android:id="@+id/imageView2"
                android:minHeight="100dp"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="@color/alertTextcolor"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:descendantFocusability="beforeDescendants"
        xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">
    <TextView
        android:text="@string/aboutfoundation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewfou"
        android:typeface="serif"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:text="@string/aboutfou1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewfou1"
        android:textAlignment="center"
        android:textColor="@color/aboutfou"
        android:typeface="serif"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:text="@string/aboutfou2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewfou2"
        android:typeface="serif"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:text="@string/aboutfou3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewfou3"
        android:textAlignment="center"
        android:typeface="serif"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:text="@string/aboutfou4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewfou4"
        android:typeface="serif"
        android:textStyle="bold"
        />
</LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>